<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relAddressInfo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:background="@drawable/main_shop_bj"
    android:clickable="true"
    android:padding="@dimen/activity_horizontal_margin">

    <RelativeLayout
        android:id="@+id/relInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/tvMore">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:drawableLeft="@drawable/main_shop_name"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/name" />

        <TextView
            android:id="@+id/tvPhoneNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:drawableLeft="@drawable/main_shop_iphone"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/phoneNum" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvName"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            android:text="@string/address" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:drawableRight="@drawable/main_more" />
</RelativeLayout>
